# reviewer-selector

./: .gitignore  Dockerfile  README.md  entrypoint.sh  pyproject.toml  requirements-dev.txt  requirements.txt  reviewer_selector.py  sample.diff  test_reviewer_selector.py
.github/workflows/: tests.yml
docker/: Dockerfile
samples/: herald_rules.sample.json
src/: reviewer_selector.py
tests/: test_reviewer_selector.py
